# master-year2-svm-and-neural-networks

./: LICENSE  pyproject.toml  td2_explicabilite_florian_crochet.ipynb
projet/: README.md  download_data.py  process_data.py  pyproject.toml  rapport_florian_crochet.md  utils.py
td/: README.md
td/data/: boston_housing.csv
