[project]
name = "master-year2-svm-and-neural-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alibi>=0.5.5",
    "ipykernel>=7.2.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "statsmodels>=0.14.6",
]
